--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -19,6 +19,11 @@ body {
   background-color: #888;
 }
 
+a {
+  color: #AFA;
+  text-decoration: none;
+}
+
 #container {
   margin-top: 20px;
   margin-left: auto;
@@ -284,11 +289,6 @@ body {
 
 #about-screen .sc {
   font-variant: small-caps;
-}
-
-#about-screen a {
-  color: #afa;
-  text-decoration: none;
 }
 
 #html5logo {
@@ -715,11 +715,24 @@ body {
   to   { -moz-box-shadow: 0px 0px 30px 1px rgba(255,255,0,0.7), inset 0px 0px 3px 1px rgba(255,255,0,0.2) }
 }
 
-#moz-warn {
-  display: none;
+#messages {
   position: absolute;
   bottom: 4px;
-  left: 4px;
+  left: 6px;
+  color: #BBB;
+  font-size: 14px;
+}
+
+.pause #messages {
+  display: none;
+}
+
+#messages div {
+  margin-top: 4px;
+}
+
+#moz-warn {
+  display: none;
   color: #A22;
   font-style: italic;
 }
